// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Connection render test connection 1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify existing delegate  1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify existing delegate  2`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
    >
      <p
        class="StyledProps---font--2ipy StyledProps---main--1Wws heading StyledProps---font-medium--2b-0"
      >
        Verify Connection to
         
        <span
          class="name"
        >
          Test Connector
        </span>
      </p>
      <div
        class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
        id="steps-progress"
      >
        <div
          class="StepsProgress---progressBar--2_Dp"
        >
          <div
            class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress---progressHeight--3zU4"
          >
            <div
              class="bp3-progress-meter"
              style="width: 66.66666666666666%;"
            />
          </div>
        </div>
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
        >
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK StyledProps---margin-right-small--Uojv"
              icon="tick"
            >
              <svg
                data-icon="tick"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick
                </desc>
                <path
                  d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: bold;"
            >
              Delegate found: Sample Delegate Name 
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-error StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-small--Uojv"
              icon="error"
            >
              <svg
                data-icon="error"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  error
                </desc>
                <path
                  d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style=""
            >
              Delegate Connection Failed
            </p>
          </div>
          <div
            class="StepsProgress---stepWrap--g0bN"
          >
            <span
              class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
              icon="blank"
            >
              <svg
                data-icon="blank"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  blank
                </desc>
              </svg>
            </span>
            <p
              class="StyledProps---font--2ipy StyledProps---main--1Wws"
              style="font-weight: normal;"
            >
              Verifying connection
            </p>
          </div>
        </div>
      </div>
      <div
        class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---margin-left-small--3XL_"
      >
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            RETEST CONNECTION
          </span>
        </button>
        <button
          class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            CLOSE
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Test Connection render test connection verify out of cluster  1`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <button
      class="bp3-button StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws testButton"
      type="button"
    >
      <span
        class="bp3-button-text"
      >
        Test Connection
      </span>
    </button>
  </div>
</div>
`;

exports[`Test Connection render test connection verify out of cluster  2`] = `
<div>
  <div
    class="Layout---vertical--3Szv StyledProps---main--1Wws"
  >
    <div
      class="Layout---vertical--3Szv StyledProps---main--1Wws StyledProps---padding-small--3f0A"
      style="height: 100%;"
    >
      <div
        class="Layout---vertical--3Szv StyledProps---main--1Wws"
      >
        <p
          class="StyledProps---font--2ipy StyledProps---main--1Wws StyledProps---font-medium--2b-0 StyledProps---color--8PuS StyledProps---color-grey700--WvM3 StyledProps---padding-right-small--2ldZ StyledProps---padding-left-small--ODrE"
        >
          Verify Connection to 
           
          <span
            class="name"
          >
            Test Connector
          </span>
        </p>
        <div
          class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws StepsProgress---stepsProgress--2IQh"
          id="steps-progress"
        >
          <div
            class="StepsProgress---progressBar--2_Dp"
          >
            <div
              class="bp3-progress-bar bp3-intent-danger bp3-no-stripes StepsProgress---progressHeight--3zU4"
            >
              <div
                class="bp3-progress-meter"
                style="width: 66.66666666666666%;"
              />
            </div>
          </div>
          <div
            class="Layout---vertical--3Szv Layout---layout-spacing-large--3HvX StyledProps---main--1Wws"
          >
            <div
              class="StepsProgress---stepWrap--g0bN"
            >
              <span
                class="bp3-icon bp3-icon-tick StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-green500--2_VK StyledProps---margin-right-small--Uojv"
                icon="tick"
              >
                <svg
                  data-icon="tick"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    tick
                  </desc>
                  <path
                    d="M14 3c-.28 0-.53.11-.71.29L6 10.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l8-8A1.003 1.003 0 0014 3z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
                style="font-weight: bold;"
              >
                1 delegate found
              </p>
            </div>
            <div
              class="StepsProgress---stepWrap--g0bN"
            >
              <span
                class="bp3-icon bp3-icon-error StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-red500--uX9L StyledProps---margin-right-small--Uojv"
                icon="error"
              >
                <svg
                  data-icon="error"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    error
                  </desc>
                  <path
                    d="M7.99-.01c-4.42 0-8 3.58-8 8s3.58 8 8 8 8-3.58 8-8-3.58-8-8-8zm1 13h-2v-2h2v2zm0-3h-2v-7h2v7z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
                style=""
              >
                Delegate Connection Failed
              </p>
            </div>
            <div
              class="StepsProgress---stepWrap--g0bN"
            >
              <span
                class="bp3-icon bp3-icon-blank StyledProps---main--1Wws StyledProps---color--8PuS StyledProps---color-yellow500--1TpH StyledProps---margin-right-small--Uojv"
                icon="blank"
              >
                <svg
                  data-icon="blank"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                >
                  <desc>
                    blank
                  </desc>
                </svg>
              </span>
              <p
                class="StyledProps---font--2ipy StyledProps---main--1Wws"
                style="font-weight: normal;"
              >
                Verifying Connection
              </p>
            </div>
          </div>
        </div>
        <div
          class="Layout---horizontal--3rmQ StyledProps---main--1Wws StyledProps---margin-left-small--3XL_"
        >
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              RETEST CONNECTION
            </span>
          </button>
          <button
            class="bp3-button bp3-minimal StyledProps---font--2ipy Button---button--4ZD5 StyledProps---main--1Wws StyledProps---intent-primary--2Xgi StyledProps---padding-left-large--28UT StyledProps---margin-top-small--1_l5 StyledProps---font-size-small--3cA6"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              CLOSE
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
